--- a/src/components/order/Orders.css
+++ b/src/components/order/Orders.css
@@ -1,6 +1,8 @@
 .Orders-container {
-    width:600px;
+    width:800px;
+    height:400px;
     font-size: 20px;
+    margin-top:40px;
 }
 .Orders-container table {
     padding:0px;
